export class Floor {
  domainId?: string;
  building!: string;
  description!: string;
  floorNr!: number;
  floorMap?: string;
}
