export class Robot {
  id!: string;
  robotCode!: string;
  nickName!: string;
  robotType!: string;
  serialNr!: string;
  description!: string;
  state?: string;
}
