@startuml Domain Model

title "Domain Model"
' left to right direction
' top to bottom direction
skinparam Padding 10
skinparam Nodesep 80
skinparam ranksep 100
skinparam groupInheritance 1
' skinparam linetype ortho
skinparam separation 1000
skinparam NoteBackgroundColor #A9A9A9
skinparam PackageStyle rectangle
skinparam package {
    BackgroundColor #D3D3D3
    FontStyle bold
}

hide circle
hide methods

    entity Robot {
        -serialNumber
        -code
        -state
        -nickname
        -description
    }

    entity RobotType {
        - typeName
        - brand
        - model
    }

    enum TaskType {}
    note bottom of TaskType {
            - Surveillance
            - Delivery
    }

    interface Task {
        - identificationCode
        - description

    }

    entity SurveillanceTask {
        - emergencyNumber
    }

    entity DeliveryTask {
        - senderName
        - receiverName
        - senderContact
        - receiverContact
        - confirmationCode
    }

    entity Building {
        - code
        - name
        - description
        - dimensions
    }

    entity Floor {
        - floorNr
        - description
        - floorMap
    }

    entity Elevator {
        - identificationNumber
        - brand
        - model
        - serialNumber
        - description
    }

    entity Room {
        - name
        - description
    }

    enum RoomCategory {}

    note bottom of RoomCategory {
            - Classroom
            - Office
            - Laboratory
            - Auditorium
    }

    entity Pathway {
    }

        entity TaskRequisition {
            - identificationCode
            - description
            - state
        }

        entity SurveillanceTaskRequisition {
            - emergencyNumber
        }

        entity DeliveryTaskRequisition {
            - senderName
            - receiverName
            - senderContact
            - receiverContact
            - confirmationCode
        }



SurveillanceTask ..|> Task: extends
DeliveryTask ..|> Task: extends

SurveillanceTaskRequisition ..|> TaskRequisition : extends
DeliveryTaskRequisition ..|> TaskRequisition : extends

Room --> RoomCategory: is of a
Room --> Building : is in

RobotType --> "*" TaskType: executes

Floor --> Building: is on
Floor "*" <-- Elevator : serves
Floor <-- Room: is on

Elevator --> Building: is on

TaskRequisition --> Room: delivery
TaskRequisition --> Room: pickup

Task --> Room: delivery
Task --> Room: pickup

SurveillanceTask -> Floor: is executed on
SurveillanceTaskRequisition -> Floor: will be executed on

Task --> User : executed by

Pathway --> "2" Floor: connects

Robot --> RobotType : is of a

TaskRequisition --> TaskType : is of a
TaskRequisition --> User : will be executed by

Robot "1" --> "*" Task : executes

TaskRequisition "1" ..> "1" Task : is of a

@enduml
